# review-summarizer

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
migrations/: env.py
migrations/data/: products.csv
migrations/versions/: 001_initial.py  002_aspect_evidence_artifacts.py  003_review_suggestion_profiles.py  004_evaluation_benchmark.py
src/: container.py
src/application/: evaluation_application.py  product_application.py  review_application.py  summary_application.py  user_application.py
src/application/review_suggestions/: invalidate_profiles.py  review_suggestion_application.py
src/domain/evaluation/: __init__.py  config.py  dto.py
src/domain/models/: product.py  review.py  summary.py  user.py
src/domain/review_suggestions/: entities.py  source_hash.py
src/domain/services/: summarization_service.py
src/infrastructure/clients/: openai_client.py
src/infrastructure/evaluation/: benchmark_runtime_sync.py  glass_box.py  ledger_dto.py
src/infrastructure/review_suggestions/: __init__.py  redis_context_cache.py  redis_profile_job_queue.py  (+1 more)
src/utils/: config.py  logger.py
src/workers/: review_suggestion_profile_worker.py
tests/: test_aspect_candidates.py  test_aspect_evidence_method.py  test_aspect_evidence_pipeline.py  test_build_generation_input.py  test_evaluation_metrics.py  test_llm_generator.py  test_llm_verifier.py  test_review_suggestions_online.py  test_review_suggestions_redis_serde.py  test_review_suggestions_source_hash.py
(+105 files in other folders)
